# nest-convoy

./: .bazelrc  .eslintrc  .eslintrc.js  .gitignore  .lintstagedrc  .prettierrc  BUILD.bazel  README.md  WORKSPACE  WORKSPACE.bazel  docker-compose.yml  jest.config.js  mikro-orm.config.js  package.json  tsconfig.json
.github/: bazel.rc  renovate.json  setup_bazel.sh
.github/workflows/: main.yml
docs/: _sidebar.md  index.html  index.md  sw.js
docs/commands/: index.md
entities/: CreditReservation.ts  Customer.ts
eventuate_entities/: ormconfig.json
eventuate_entities/entities/: CdcMonitoring.ts  Entities.ts  Events.ts  Message.ts  OffsetStore.ts  ReceivedMessages.ts  Snapshots.ts
example/: order.state-machine.ts
examples/: order.state-machine.ts
examples/basic-in-memory/: BUILD.bazel  app.module.ts  main.ts  test-command-handler.ts  tokens.ts
examples/basic-in-memory/commands/: do-something.command.ts  test-command.handler.ts  test-command.service.ts  test-commands.module.ts  tokens.ts
examples/basic-in-memory/events/: account-debited.handler.ts  account-debited.ts  test-event.service.ts  test-events.module.ts  tokens.ts
examples/cdc/: convoy-connector.json  docker-compose.yml
examples/cdc-inventory-debezium/: docker-compose.yaml
examples/cdc-inventory-debezium/entities/: Customers.ts  Geom.ts  Orders.ts  Products.ts  ProductsOnHand.ts  SpatialRefSys.ts
examples/cdc-inventory-debezium/output/: ormconfig.json
examples/cdc/yb-kafka-connector/: Dockerfile  kafka.connect.properties  yugabyte.sink.properties
examples/customer-and-orders/: README.md
examples/debezium-outbox/: README.md  connector.json  docker-compose.yaml  outbox-connector.json
examples/debezium-outbox/common/: base.entity.ts
examples/debezium-outbox/order/: order.controller.ts  order.service.ts
examples/debezium-sagas-customers-orders/: customers-connector.json  docker-compose.yaml  orders-connector.json
examples/debezium-sagas-customers-orders/common/: BUILD.bazel  index.ts  money.ts
examples/debezium-sagas-customers-orders/customers/: BUILD.bazel  main.ts
examples/debezium-sagas-customers-orders/orders/: order.repository.ts  (+1 more)
examples/ftgo-app/: docker-compose.yaml  skaffold.yaml
examples/ftgo-app/services/restaurant/: BUILD.bazel  restaurant.module.ts
examples/ftgo-app/services/restaurant/api/: BUILD.bazel  channel.ts  dto.ts  events.ts  index.ts
examples/ftgo-app/services/restaurant/api/dto/: create-restaurant-request.dto.ts
examples/ftgo-app/services/restaurant/entities/: BUILD.bazel  entities.module.ts  index.ts  menu-item.entity.ts  restaurant-menu.entity.ts  restaurant.entity.ts
examples/ftgo-app/services/restaurant/services/: BUILD.bazel  domain-event-publisher.ts  index.ts  restaurant.service.ts  services.module.ts
examples/orchestration/: README.md
examples/saga/: BUILD.bazel  app.module.ts  main.ts
examples/saga/commands/: reserve-credit.command.ts
examples/saga/common/: index.ts  money.ts  order-details.ts
examples/saga/customers/: customers.module.ts
examples/saga/customers/commands/: index.ts  reserve-credit-command.handler.ts  reserve-credit.command.ts
examples/saga/customers/entities/: credit-reservation.entity.ts  customer.entity.ts
examples/saga/customers/replies/: customer-credit-limit-exceeded.ts  customer-credit-reservation-failed.ts  customer-not-found.ts  index.ts
examples/saga/customers/services/: customer.service.ts
examples/saga/entities/: order.entity.ts
examples/saga/orders/: orders.module.ts
examples/saga/orders/commands/: approve-order.command.ts  cancel-order.command.ts  index.ts  reject-order.command.ts  release-credit.command.ts
examples/saga/orders/common/: index.ts  order-details.ts  order-state.ts
examples/saga/orders/entities/: order.entity.ts
examples/saga/orders/events/: create-order-saga-completed-successfully.handler.ts  create-order-saga-completed-successfully.ts  create-order-saga-rolled-back.handler.ts  create-order-saga-rolled-back.ts  index.ts
examples/saga/orders/sagas/: index.ts
examples/saga/orders/sagas/create-order/: base-create-order.saga.ts  create-order-saga.data.ts  create-order.saga.ts  local-create-order-saga.data.ts  local-create-order.saga.ts
examples/saga/orders/sagas/participants/: customer-service.proxy.ts  order-service.proxy.ts
examples/saga/orders/services/: index.ts  order.service.ts
examples/saga/replies/: customer-credit-limit-exceeded.ts  index.ts
examples/saga/sagas/create-order/: create-order-saga-data.ts  create-order.saga.ts
examples/sagas-customers-orders/: docker-compose.yml  run.sh
examples/sagas-customers-orders/customers/: BUILD.bazel  customer-command-handlers.ts  customer.service.ts  customers.controller.ts  customers.module.ts  main.ts
examples/sagas-customers-orders/customers/api/: commands.ts  exceptions.ts  replies.ts
examples/sagas-customers-orders/customers/commands/: index.ts  reserve-credit-command.handler.ts  reserve-credit.command.ts
examples/sagas-customers-orders/customers/entities/: credit-reservation.entity.ts  customer.entity.ts  index.ts
examples/sagas-customers-orders/customers/replies/: customer-credit-reserved.ts  customer-not-found.ts  index.ts
examples/sagas-customers-orders/customers/services/: customer.service.ts
examples/sagas-customers-orders/orders/: BUILD.bazel  main.ts  order.repository.ts  order.service.ts  orders.controller.ts  orders.module.ts
examples/sagas-customers-orders/orders/common/: order-details.ts
examples/sagas-customers-orders/orders/entities/: order.entity.ts
examples/sagas-customers-orders/orders/sagas/create-order/: create-order-saga.data.ts  create-order.saga.ts
examples/sagas-customers-orders/orders/sagas/participants/: customer-service.proxy.ts  index.ts
patches/: @bazel+typescript+2.0.0.patch  @bazel+typescript+3.5.0.patch  @deepkit+core+1.0.1-alpha.12.patch  @deepkit+type+1.0.1-alpha.12.patch  @deepkit+type+1.0.1-alpha.13.patch
scripts/: publish.sh  release.sh  setup_bazel.sh  setup_ci_bazel.sh  setup_ibazel.sh
tools/: defaults.bzl  eslint.bzl  jest.bzl
(+110 files in other folders)
