load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")
load("//tools:defaults.bzl", "nest_library")

nest_library(
    name = "lib",
    srcs = glob(
        ["**/*.ts"],
        exclude = ["*.spec.ts"],
    ),
    deps = [
        "//packages/commands",
        "//packages/cqrs",
        "//packages/events",
        "//packages/in-memory",
        "//packages/messaging",
        "//packages/messaging/broker",
        "@npm//@nestjs/core",
        "@npm//@nestjs/microservices",
        "@npm//@nestjs/platform-express",
    ],
)

nodejs_binary(
    name = "basic-in-memory",
    data = [":lib"],
    entry_point = "main.ts",
)
