load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")
load("//tools:defaults.bzl", "nest_library")

nest_library(
    name = "src",
    srcs = glob(["**/*.ts"]),
    deps = [
        "//examples/sagas-customers-orders/common",
        "//examples/sagas-customers-orders/customers:src",
        "//packages/common",
        "//packages/core",
        "//packages/messaging/broker/kafka",
        "@npm//@nestjs/core",
        "@npm//@nestjs/microservices",
        "@npm//@nestjs/platform-express",
        "@npm//@nestjs/typeorm",
        "@npm//kafkajs",
        "@npm//pg",
        "@npm//redis",
        "@npm//typeorm",
    ],
)

nodejs_binary(
    name = "orders",
    data = [
        ":src",
    ],
    entry_point = ":main.ts",
)
