load("//tools:defaults.bzl", "nest_app", "nest_library")

nest_library(
    name = "src",
    srcs = glob(
        ["**/*.ts"],
        exclude = ["main.ts"],
    ),
    deps = [
        "//examples/sagas-customers-orders/common",
        "//examples/sagas-customers-orders/customers:src",
        "//packages/common",
        "//packages/core",
        "//packages/messaging/broker/database",
        "//packages/messaging/broker/kafka",
        "@npm//@deepkit/type",
        "@npm//@nestjs/typeorm",
        "@npm//kafkajs",
        "@npm//pg",
        "@npm//redis",
        "@npm//typeorm",
    ],
)

nest_app(
    name = "orders",
    entry = ":main.ts",
    deps = [":src"],
)
