load("//tools:defaults.bzl", "nest_library")

nest_library(
    name = "restaurant",
    srcs = glob(
        ["*.ts"],
        exclude = ["*.spec.ts"],
    ),
    visibility = [
        "//visibility:private",
    ],
    deps = [
        "//examples/ftgo-app/services/restaurant/api",
        "//examples/ftgo-app/services/restaurant/entities",
        "//examples/ftgo-app/services/restaurant/services",
        "//packages/core",
        "//packages/kafka",
        "@npm//@nestjs/microservices",
    ],
)
