load("//tools:defaults.bzl", "nest_library")

nest_library(
    name = "api",
    module_name = "@ftgo-app/api/restaurant",
    srcs = glob(
        ["*.ts"],
        exclude = ["*.spec.ts"],
    ),
    deps = [
       "//examples/ftgo-app/libs/common"
    ],
    visibility = [
        "//examples/ftgo-app:__subpackages__"
    ]
)
