load("//tools:defaults.bzl", "nest_library")

nest_library(
    name = "api",
    srcs = glob(
        ["*.ts"],
        exclude = ["*.spec.ts"],
    ),
    module_name = "@ftgo-app/api/restaurant",
    visibility = [
        "//examples/ftgo-app:__subpackages__",
    ],
    deps = [
        "//examples/ftgo-app/libs/common",
    ],
)
