load("//tools:defaults.bzl", "nest_library")

nest_library(
    name = "entities",
    srcs = glob(
        ["*.ts"],
        exclude = ["*.spec.ts"],
    ),
    visibility = [
        "//examples/ftgo-app/services/restaurant:__subpackages__",
    ],
    deps = [
        "//examples/ftgo-app/libs/common",
        "//packages/core",
        "@npm//@nestjs/typeorm",
        "@npm//typeorm",
    ],
)
