load("//tools:defaults.bzl", "nest_library")

nest_library(
    name = "services",
    srcs = glob(
        ["*.ts"],
        exclude = ["*.spec.ts"],
    ),
    visibility = [
        "//examples/ftgo-app/services/restaurant:__subpackages__",
    ],
    deps = [
        "//examples/ftgo-app/services/restaurant/api",
        "//examples/ftgo-app/services/restaurant/entities",
        "//packages/core",
        "@npm//@nestjs/typeorm",
        "@npm//typeorm",
    ],
)
